--- a/exercise02_buildup_answer.ipynb
+++ b/exercise02_buildup_answer.ipynb
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1780,20 +1780,38 @@
     "\n",
     "자, 예제 문제 나갑니다.\n",
     "\n",
-    "현재 history_data_list에 담겨 있는 숫자들 중 당첨 공에 해당하는 공의 번호를 (각 회차당 6개씩) 카운팅 하여,\n",
+    "(1) 현재 history_data_list에 담겨 있는 숫자들 중 당첨 공에 해당하는 공의 번호를 (각 회차당 6개씩) 카운팅 하여, 지금까지 총 999회 동안 각 번호가 몇 번씩 나왔었는지 알아내시기 바랍니다.\n",
     "\n",
-    "지금까지 총 999회 동안 각 번호가 몇 번씩 나왔었는지 알아내시기 바랍니다.\n",
+    "앞서 배웠던 딕셔너리로 갯수 세는 방법을 이용하셔도 좋고, 이 경우는 1 ~ 45 까지의 연속된 숫자이고 중간에 빈 것도 없을테니 45개짜리 리스트를 만들어서 카운팅 하셔도 됩니다.\n",
+    "(또는 인덱스 0을 버릴 생각을 한다면 46개짜리 리스트)\n",
     "\n",
-    "앞서 배웠던 딕셔너리로 갯수 세는 방법을 이용하셔도 좋고, \n",
+    "(2) 45개 번호의 카운팅 결과를 아래 주석에 주어진 조건으로 출력해 보시기 바랍니다.\n",
     "\n",
-    "이것은 1 ~ 45 까지의 연속된 숫자이고 중간에 빈 것도 없을테니 45개짜리 (또는 인덱스 0을 버린다면 46개짜리) 배열을 만들어서 카운팅 하셔도 됩니다.\n",
-    "\n",
-    "45개 번호의 총 출현 개수를 카운팅 하여 출력해 보시기 바랍니다."
+    "힌트: hisory_data_list 배열의 각 원소는 리스트인데, [회차, 1번공, 2번공, 3번공, 4번공, 5번공, 6번공, 보너스공 번호] 이렇게 들어있어요.\n",
+    "이 중에서 맨 앞의 회차, 맨 마지막의 보너스공 번호를 제외하고 중간의 숫자 6개만 가져와야 합니다.\n",
+    "리스트의 슬라이싱 기능을 잘 이용해 보시기 바랍니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# history_data_list에 담긴 숫자들을 잘 가져와서 카운팅 해보세요.\n",
+    "# history_data_list는 이중 배열이므로 중첩된 for 문이 필요할 것 같네요. list comprehension을 활용해도 됩니다.\n",
+    "# 카운팅 결과를 number_counter라는 이름의 딕셔너리 또는 리스트에 담아 보시기 바랍니다.\n",
+    "\n",
+    "number_counter = [0] * 45\n",
+    "\n",
+    "for round in history_data_list:\n",
+    "  for num in round[1:7]:\n",
+    "    number_counter[num - 1] += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1849,25 +1867,96 @@
     }
    ],
    "source": [
-    "# history_data_list에 담긴 숫자들을 잘 가져와서 카운팅 해보세요.\n",
-    "# 이중 배열이므로 중첩된 for 문이 필요할 수 있고, list comprehension을 활용해봐도 됩니다.\n",
-    "# 카운팅 용 딕셔너리 또는 리스트를 선언하셔야 할 것입니다. 이름은 number_counter라고 하시기 바랍니다.\n",
-    "\n",
-    "number_counter = [0] * 45\n",
-    "\n",
-    "for round in history_data_list:\n",
-    "  for num in round[1:7]:\n",
-    "    number_counter[num - 1] += 1\n",
-    "\n",
-    "_ = [print(f'{i + 1} : {c}') for i, c in enumerate(number_counter)]\n",
-    "\n",
-    "\n",
-    "# 출력하실 때에는 {공번호} : {횟수} 형태로 한줄씩 출력해 보시기 바랍니다.\n",
+    "# number_counter에 담긴 결과를 아래 형태로 출력하되, 공 번호를 기준으로 오름차순으로 정렬해 보세요.\n",
+    "#\n",
+    "#  {공 번호} : {횟수}\n",
+    "# \n",
     "# 예:\n",
-    "# 1 : 142\n",
-    "# 2 : 135\n",
-    "# ...\n",
-    "# 45 : 138\n"
+    "#  1 : 142\n",
+    "#  2 : 135\n",
+    "#  ...\n",
+    "#  45 : 138\n",
+    "\n",
+    "for i, c in enumerate(number_counter):\n",
+    "  print(f'{i + 1} : {c}')\n",
+    "\n",
+    "\n",
+    "# _ = [print(f'{i + 1} : {c}') for i, c in enumerate(number_counter)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34 : 152\n",
+      "18 : 147\n",
+      "27 : 145\n",
+      "43 : 145\n",
+      "13 : 144\n",
+      "17 : 143\n",
+      "39 : 143\n",
+      "1 : 142\n",
+      "12 : 141\n",
+      "14 : 141\n",
+      "40 : 141\n",
+      "20 : 139\n",
+      "33 : 139\n",
+      "37 : 139\n",
+      "4 : 138\n",
+      "10 : 138\n",
+      "45 : 138\n",
+      "2 : 135\n",
+      "21 : 135\n",
+      "24 : 135\n",
+      "31 : 135\n",
+      "3 : 134\n",
+      "11 : 134\n",
+      "15 : 134\n",
+      "36 : 134\n",
+      "44 : 134\n",
+      "7 : 132\n",
+      "19 : 132\n",
+      "26 : 132\n",
+      "38 : 132\n",
+      "16 : 131\n",
+      "42 : 131\n",
+      "5 : 130\n",
+      "8 : 130\n",
+      "25 : 128\n",
+      "6 : 125\n",
+      "28 : 124\n",
+      "35 : 124\n",
+      "41 : 123\n",
+      "29 : 122\n",
+      "23 : 121\n",
+      "30 : 120\n",
+      "22 : 113\n",
+      "32 : 113\n",
+      "9 : 106\n"
+     ]
+    }
+   ],
+   "source": [
+    "# number_counter에 담긴 결과를 아래 형태로 출력하되, 이번엔 출현 횟수를 기준으로 내림차순으로 정렬해 보세요.\n",
+    "#\n",
+    "#  {공 번호} : {횟수}\n",
+    "# \n",
+    "# 예:\n",
+    "#  34 : 152\n",
+    "#  18 : 147\n",
+    "#  ...\n",
+    "#  9 : 106\n",
+    "\n",
+    "for i, c in sorted(enumerate(number_counter), key=lambda x: x[1], reverse=True):\n",
+    "  print(f'{i + 1} : {c}')\n",
+    "\n",
+    "\n",
+    "# _ = [print(f'{i + 1} : {c}') for i, c in sorted(enumerate(number_counter), key=lambda x: x[1], reverse=True)]\n"
    ]
   },
   {
