테스트입니다.

--- a/exercise02_buildup_answer.ipynb
+++ b/exercise02_buildup_answer.ipynb
@@ -1987,6 +1987,7 @@
     }
    ],
    "source": [
+    "\n",
     "import numpy as np\n",
     "\n",
     "\n",
@@ -1998,7 +1999,10 @@
     "max_v = np.amax(np_counter)\n",
     "\n",
     "print(f'가장 많이 나온 공: {max_k} 번공,  횟수: {max_v} 회')\n",
-    "print(f'가장 적게 나온 공: {min_k} 번공,  횟수: {min_v} 회')\n"
+    "print(f'가장 적게 나온 공: {min_k} 번공,  횟수: {min_v} 회')\n",
+    "\n",
+    "\n",
+    "print('test')\n"
    ]
   },
   {
