실습예제#2 풀이

--- a/exercise02_buildup_answer.ipynb
+++ b/exercise02_buildup_answer.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -454,10 +454,10 @@
      "output_type": "stream",
      "text": [
       "{'Tom'}\n",
-      "{'Jennifer', 'Chris', 'Jane', 'James', 'Emma', 'John', 'Tom'}\n",
-      "{'John', 'Jane', 'James'}\n",
-      "{'Jane', 'James', 'Emily', 'John', 'Tom'}\n",
-      "{'Jane', 'Emily', 'John', 'Tom'}\n"
+      "{'John', 'Tom', 'Chris', 'James', 'Jane', 'Jennifer', 'Emma'}\n",
+      "{'Jane', 'James', 'John'}\n",
+      "{'John', 'Tom', 'James', 'Emily', 'Jane'}\n",
+      "{'John', 'Tom', 'Emily', 'Jane'}\n"
      ]
     }
    ],
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1794,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1811,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1881,12 +1881,12 @@
     "  print(f'{i + 1} : {c}')\n",
     "\n",
     "\n",
-    "# _ = [print(f'{i + 1} : {c}') for i, c in enumerate(number_counter)]\n"
+    "# _ = [print(f'{i + 1} : {c}') for i, c in enumerate(number_counter)]  # 이렇게 list comprehension 으로도 가능.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1993,16 +1993,50 @@
     "\n",
     "np_counter = np.array(number_counter)\n",
     "\n",
-    "min_k = np.argmin(np_counter) + 1\n",
-    "min_v = np.amin(np_counter)\n",
-    "max_k = np.argmax(np_counter) + 1\n",
-    "max_v = np.amax(np_counter)\n",
+    "min_ball = np.argmin(np_counter) + 1\n",
+    "min_count = np.amin(np_counter)\n",
+    "max_ball = np.argmax(np_counter) + 1\n",
+    "max_count = np.amax(np_counter)\n",
     "\n",
-    "print(f'가장 많이 나온 공: {max_k} 번공,  횟수: {max_v} 회')\n",
-    "print(f'가장 적게 나온 공: {min_k} 번공,  횟수: {min_v} 회')\n",
+    "print(f'가장 많이 나온 공: {max_ball} 번공,  횟수: {max_count} 회')\n",
+    "print(f'가장 적게 나온 공: {min_ball} 번공,  횟수: {min_count} 회')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "가장 많이 나온 공: 34 번공,  횟수: 152 회\n",
+      "가장 적게 나온 공: 9 번공,  횟수: 106 회\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numpy를 이용하지 않고 다른 방식으로도 풀 수 있어요.\n",
+    "# 반복문과 조건문을 이용해서 풀면 됩니다.\n",
+    "\n",
+    "# 우선 최소값, 최대값의 인덱스를 모두 0, 값을 모두 0번째 카운트 값으로 초기화 시킵니다.\n",
+    "min_ball = max_ball = 0\n",
+    "min_count = max_count = number_counter[0]\n",
+    "\n",
+    "# 1번째부터 반복하면서 그때까지의 최소값, 최대값과 비교하여 값을 업데이트 합니다.\n",
+    "for i in range(1, len(number_counter)):\n",
+    "  if number_counter[i] < min_count:\n",
+    "    min_ball = i + 1\n",
+    "    min_count = number_counter[i]\n",
+    "    \n",
+    "  elif number_counter[i] > max_count:\n",
+    "    max_ball = i + 1\n",
+    "    max_count = number_counter[i]\n",
     "\n",
     "\n",
-    "print('test')\n"
+    "print(f'가장 많이 나온 공: {max_ball} 번공,  횟수: {max_count} 회')\n",
+    "print(f'가장 적게 나온 공: {min_ball} 번공,  횟수: {min_count} 회')\n"
    ]
   },
   {
@@ -2022,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2047,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2105,13 +2139,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "당신의 최고 당첨은 312 회차에서 4 등입니다.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 이건 저도 아직 안짜봤어요. 재미있을 것 같아서 내 봅니다.\n",
-    "# 보너스 문제들은 모두 선택사항입니다.\n",
-    "# 도전하실 분은 도전해 보세요."
+    "\n",
+    "line = input(\"숫자 6개 입력해 주세요 [1~45]\")\n",
+    "\n",
+    "mynums = [int(x) for x in line.strip().split()]\n",
+    "mynum_set = set(mynums)\n",
+    "\n",
+    "# mynum_set = set(map(lambda x: int(x), line.strip().split()))  이렇게 해도 같은 결과\n",
+    "\n",
+    "top_rank = 6      # 꽝\n",
+    "top_rank_i = -1\n",
+    "\n",
+    "for round_list in history_data_list:\n",
+    "  cur_i = round_list[0]\n",
+    "  win_set = set(round_list[1:-1])\n",
+    "  bonus = round_list[-1]\n",
+    "  \n",
+    "  matched = len(mynum_set & win_set)\n",
+    "  \n",
+    "  if matched == 6:\n",
+    "    cur_rank = 1\n",
+    "  elif matched == 5:\n",
+    "    if bonus in (mynum_set - win_set):\n",
+    "      cur_rank = 2\n",
+    "    else:\n",
+    "      cur_rank = 3\n",
+    "  elif matched == 4:\n",
+    "    cur_rank = 4\n",
+    "  elif matched == 3:\n",
+    "    cur_rank = 5\n",
+    "  else:\n",
+    "    cur_rank = 6\n",
+    "  \n",
+    "  if cur_rank < top_rank:\n",
+    "    top_rank = cur_rank\n",
+    "    top_rank_i = cur_i\n",
+    "\n",
+    "\n",
+    "print(f'당신의 최고 당첨은 {top_rank_i} 회차에서 {top_rank} 등입니다.')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[312, 2, 3, 5, 6, 12, 20, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(history_data_list[-312])"
    ]
   },
   {
