--- a/exercise02_buildup.ipynb
+++ b/exercise02_buildup.ipynb
@@ -1839,7 +1839,7 @@
     "\n",
     "가장 많이 나오는 공의 번호와 그 횟수, 가장 적게 나오는 공의 번호와 그 횟수를 구하시오.\n",
     "\n",
-    "힌트: numpy 모듈을 이용하고, amax(), argmax(), amin(), argmin() 함수를 이용해 보세요.\n",
+    "힌트: numpy 모듈을 이용하고, amax(), argmax(), amin(), argmin() 함수를 이용해 보세요. 물론 numpy를 이용하지 않고 for, if문 등으로 구현할 수도 있습니다.\n",
     "\n",
     "참고: 보너스 문제들은 파이썬을 이용하여 데이터를 다루는 스킬을 요구합니다. (예: numpy, matplotlib 등)"
    ]
@@ -1954,9 +1954,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 이건 저도 아직 안짜봤어요. 재미있을 것 같아서 내 봅니다.\n",
-    "# 보너스 문제들은 모두 선택사항입니다.\n",
-    "# 도전하실 분은 도전해 보세요."
+    "# 재미있을 것 같아서 내 봅니다.\n",
+    "# 보너스 문제들은 선택사항이지만 한번 도전해 보세요.\n"
    ]
   },
   {
