--- a/exercise02_buildup_answer.ipynb
+++ b/exercise02_buildup_answer.ipynb
@@ -418,7 +418,7 @@
       "{1, 3, 5, 7, 9} <class 'set'>\n",
       "{1, 3, 5, 7, 9} <class 'set'>\n",
       "{'test'} <class 'set'>\n",
-      "{'t', 'e', 's'} <class 'set'>\n"
+      "{'s', 'e', 't'} <class 'set'>\n"
      ]
     }
    ],
@@ -454,10 +454,10 @@
      "output_type": "stream",
      "text": [
       "{'Tom'}\n",
-      "{'John', 'Tom', 'Chris', 'James', 'Jane', 'Jennifer', 'Emma'}\n",
-      "{'Jane', 'James', 'John'}\n",
-      "{'John', 'Tom', 'James', 'Emily', 'Jane'}\n",
-      "{'John', 'Tom', 'Emily', 'Jane'}\n"
+      "{'Emma', 'Jennifer', 'James', 'John', 'Chris', 'Jane', 'Tom'}\n",
+      "{'James', 'John', 'Jane'}\n",
+      "{'James', 'John', 'Emily', 'Jane', 'Tom'}\n",
+      "{'John', 'Emily', 'Jane', 'Tom'}\n"
      ]
     }
    ],
@@ -1974,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2112,13 +2112,13 @@
     "\n",
     "plt.bar(range(1, 46), number_counter)\n",
     "plt.xlim(0, 46)\n",
-    "plt.text(min_k, min_v, f'Min:(#{min_k}, {min_v})', horizontalalignment='center', color='red', size='large', fontweight='bold')\n",
-    "plt.text(max_k, max_v, f'Max:(#{max_k}, {max_v})', horizontalalignment='center', color='red', size='large', fontweight='bold')\n",
+    "plt.text(min_ball, min_count, f'Min:(#{min_ball}, {min_count})', horizontalalignment='center', color='red', size='large', fontweight='bold')\n",
+    "plt.text(max_ball, max_count, f'Max:(#{max_ball}, {max_count})', horizontalalignment='center', color='red', size='large', fontweight='bold')\n",
     "plt.show()\n",
     "\n",
     "plt.hist(number_history_1d, bins=45)\n",
-    "plt.text(min_k, min_v, f'Min:(#{min_k}, {min_v})', horizontalalignment='center', color='red', size='large', fontweight='bold')\n",
-    "plt.text(max_k, max_v, f'Max:(#{max_k}, {max_v})', horizontalalignment='center', color='red', size='large', fontweight='bold')\n",
+    "plt.text(min_ball, min_count, f'Min:(#{min_ball}, {min_count})', horizontalalignment='center', color='red', size='large', fontweight='bold')\n",
+    "plt.text(max_ball, max_count, f'Max:(#{max_ball}, {max_count})', horizontalalignment='center', color='red', size='large', fontweight='bold')\n",
     "plt.show()\n"
    ]
   },
@@ -2139,14 +2139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "당신의 최고 당첨은 312 회차에서 4 등입니다.\n"
+      "당신의 최고 당첨은 188 회차에서 4 등입니다.\n"
      ]
     }
    ],
@@ -2193,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
