실습예제 #4 정답, 문제 파일 바꾸기

--- a/exercise04_buildup_answer.ipynb
+++ b/exercise04_buildup_answer.ipynb
@@ -146,28 +146,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[올림픽] 쇼트트랙 박장혁, 다친 손으로 계주 출전 \"손 걸고 타겠다\" 링크: http://yna.kr/AKR20220214158800007?did=1195m\n",
+      "쇼트트랙, 유종의 미 거둘까…16일 여자 1,500m·남자 5,000m 계주 링크: https://news.imaeil.com/page/view/2022021415194368020\n",
+      "男 쇼트트랙 박장혁에 헝가리 감독이 도움 준 사연 링크: https://www.hankyung.com/sports/article/2022021421297\n",
+      "쇼트트랙 여자 3000m 계주 은메달…3대회 연속 메달 링크: http://news.kmib.co.kr/article/view.asp?arcid=0016766391&code=61161611&cp=nv\n",
+      "여자 쇼트트랙 계주 은메달…BTS RM의 축하 \"멋\" 링크: https://www.nocutnews.co.kr/news/5706295\n",
+      "여자 쇼트트랙, 시상식서 깜찍한 하트 세리머니[베이징2022] 링크: http://www.newsis.com/view/?id=NISX20220214_0001758880&cID=10511&pID=10500\n",
+      "文, 쇼트트랙 女 대표팀에 축전… “함께하는 힘이 감동으로” 링크: http://www.segye.com/content/html/2022/02/14/20220214500090.html?OutUrl=naver\n",
+      "쇼트트랙 여자대표팀, 3,000m 계주 은메달 링크: http://mbn.mk.co.kr/pages/news/newsView.php?category=mbn00011&news_seq_no=4698815\n",
+      "여자 쇼트트랙, 3000m 계주서 은메달 링크: https://hankookilbo.com/News/Read/A2022021320100002455?did=NA\n",
+      "훈련 마칠때까지 웃음기 없던 男 쇼트트랙 “내일 밤 기대를” 링크: https://www.donga.com/news/article/all/20220215/111789577/1\n"
+     ]
+    }
+   ],
    "source": [
     "from bs4 import BeautifulSoup as bs\n",
     "import requests\n",
     "\n",
     "\n",
-    "url = ''\n",
+    "url = 'https://search.naver.com/search.naver?where=news&sm=tab_jum&query=쇼트트랙'\n",
     "\n",
     "\n",
-    "response = ...\n",
-    "html_text = ...\n",
+    "response = requests.get(url)\n",
+    "html_text = response.text\n",
     "\n",
-    "soup = ...\n",
+    "soup = bs(html_text, 'html.parser')\n",
     "\n",
-    "a_tags = ...\n",
+    "a_tags = soup.select('a.news_tit')\n",
     "\n",
     "for a in a_tags:\n",
-    "    href = ...\n",
-    "    title = ...\n",
-    "    print(...)\n"
+    "    href = a.attrs['href']\n",
+    "    title = a.get_text()\n",
+    "    print(title, '링크:', href)\n"
    ]
   },
   {
@@ -187,19 +204,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "서초구 기온:  현재 온도-5° \n"
+     ]
+    }
+   ],
    "source": [
     "from bs4 import BeautifulSoup as bs\n",
     "import requests\n",
     "\n",
     "\n",
     "location = input('지역을 입력하세요: ')\n",
-    "url = ...\n",
+    "url = f'https://search.naver.com/search.naver?where=nexearch&sm=top_hty&fbm=1&ie=utf8&query={location}날씨'\n",
     "\n",
     "\n",
-    "...\n"
+    "response = requests.get(url)\n",
+    "html_text = response.text\n",
+    "\n",
+    "\n",
+    "soup = bs(html_text, 'html.parser')\n",
+    "\n",
+    "temperature = soup.select_one('div.temperature_text').get_text()\n",
+    "\n",
+    "print(location, '기온:', temperature)\n"
    ]
   },
   {
@@ -300,16 +333,23 @@
     "\n",
     "\n",
     "# 구글로 이동\n",
+    "driver.get('https://www.google.com/')\n",
+    "time.sleep(2)   # 2초간 대기\n",
     "\n",
     "\n",
     "# 검색창\n",
+    "search_box = driver.find_element(By.NAME, 'q')\n",
     "\n",
     "\n",
     "# 검색어 창에 텍스트 입력 (키보드 입력)\n",
+    "search_box.send_keys('코스피 지수')\n",
+    "search_box.send_keys(Keys.RETURN)\n",
+    "time.sleep(2)   # 2초간 대기\n",
     "\n",
     "\n",
-    "# 원하는 내용 가져오기\n",
-    "\n"
+    "# 원하는 내용 가져오기 - css_selector 이용\n",
+    "element = driver.find_element(By.XPATH, '//*[@id=\"knowledge-finance-wholepage__entity-summary\"]/div/g-card-section/div/g-card-section/div[2]/div[1]/span[1]/span/span')\n",
+    "print(element.get_attribute(\"innerHTML\"))\n"
    ]
   }
  ],
