실습예제 #4 문제, 정답 교체

--- a/exercise04_buildup_answer.ipynb
+++ b/exercise04_buildup_answer.ipynb
@@ -30,9 +30,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: requests in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (2.27.1)\n",
+      "Requirement already satisfied: beautifulsoup4 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (4.10.0)\n",
+      "Requirement already satisfied: selenium in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (4.1.0)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from requests) (2.0.12)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from requests) (2021.10.8)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from requests) (3.3)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from requests) (1.26.8)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from beautifulsoup4) (2.3.1)\n",
+      "Requirement already satisfied: trio-websocket~=0.9 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from selenium) (0.9.2)\n",
+      "Requirement already satisfied: trio~=0.17 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from selenium) (0.19.0)\n",
+      "Requirement already satisfied: sortedcontainers in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from trio~=0.17->selenium) (2.4.0)\n",
+      "Requirement already satisfied: sniffio in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from trio~=0.17->selenium) (1.2.0)\n",
+      "Requirement already satisfied: outcome in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from trio~=0.17->selenium) (1.1.0)\n",
+      "Requirement already satisfied: async-generator>=1.9 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from trio~=0.17->selenium) (1.10)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from trio~=0.17->selenium) (21.4.0)\n",
+      "Requirement already satisfied: wsproto>=0.14 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from trio-websocket~=0.9->selenium) (1.0.0)\n",
+      "Requirement already satisfied: pyOpenSSL>=0.14 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from urllib3<1.27,>=1.21.1->requests) (22.0.0)\n",
+      "Requirement already satisfied: cryptography>=1.3.4 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from urllib3<1.27,>=1.21.1->requests) (36.0.1)\n",
+      "Requirement already satisfied: cffi>=1.12 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from cryptography>=1.3.4->urllib3<1.27,>=1.21.1->requests) (1.15.0)\n",
+      "Requirement already satisfied: pycparser in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from cffi>=1.12->cryptography>=1.3.4->urllib3<1.27,>=1.21.1->requests) (2.21)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in /Users/brix/opt/anaconda3/envs/basic/lib/python3.8/site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.13.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# 필요한 패키지들을 설치합니다. 최초 1회만 실행하면 됩니다.\n",
     "\n",
@@ -45,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -96,15 +125,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "역사적 금메달 만들어낸 '양보'…잭슨과 보의 특별한 포옹\n",
-      "https://news.sbs.co.kr/news/endPage.do?news_id=N1006639868&plink=ORI&cooper=NAVER\n"
+      "올림픽 금메달 따면 8억8000만원 '최대 포상금' 준다는 이 나라, 어디길래\n",
+      "http://news.mk.co.kr/newsRead.php?no=143136&year=2022\n"
      ]
     }
    ],
@@ -146,23 +175,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[베이징올림픽]16일 쇼트트랙 여자 1500m 열려...마지막 '금' 사냥 링크: http://www.fnnews.com/news/202202151533007608\n",
+      "한국 대표팀이 반칙왕?…황당한 中 쇼트트랙 영화 링크: http://news.mk.co.kr/newsRead.php?no=143442&year=2022\n",
+      "[올림픽] 훈련하는 쇼트트랙 대표팀 링크: http://yna.kr/PYH20220215141200013?did=1196m\n",
+      "[인터뷰]쇼트트랙 최민정 \"내일이면 4년 준비도 끝…후회없이!\" 링크: http://www.newsis.com/view/?id=NISX20220215_0001759903&cID=10511&pID=10500\n",
+      "[올림픽] 쇼트트랙 최민정, 여자 1500ｍ 준준결승서 中 장위팅과 대결 링크: https://www.news1.kr/articles/?4585718\n",
+      "[올림픽] 쇼트트랙 최민정, 여자 1,500ｍ 준준결승서 스휠팅 피했다 링크: http://yna.kr/AKR20220215110800007?did=1195m\n",
+      "韓쇼트트랙 남매 '마지막 골든데이' 링크: https://www.hankyung.com/sports/article/202202154840i\n",
+      "[올림픽] 김아랑의 부정 출발, 실수 아닌 작전…한국 쇼트트랙의 수싸움 링크: http://yna.kr/AKR20220215124400007?did=1195m\n",
       "[올림픽] 쇼트트랙 박장혁, 다친 손으로 계주 출전 \"손 걸고 타겠다\" 링크: http://yna.kr/AKR20220214158800007?did=1195m\n",
-      "쇼트트랙, 유종의 미 거둘까…16일 여자 1,500m·남자 5,000m 계주 링크: https://news.imaeil.com/page/view/2022021415194368020\n",
-      "男 쇼트트랙 박장혁에 헝가리 감독이 도움 준 사연 링크: https://www.hankyung.com/sports/article/2022021421297\n",
-      "쇼트트랙 여자 3000m 계주 은메달…3대회 연속 메달 링크: http://news.kmib.co.kr/article/view.asp?arcid=0016766391&code=61161611&cp=nv\n",
-      "여자 쇼트트랙 계주 은메달…BTS RM의 축하 \"멋\" 링크: https://www.nocutnews.co.kr/news/5706295\n",
-      "여자 쇼트트랙, 시상식서 깜찍한 하트 세리머니[베이징2022] 링크: http://www.newsis.com/view/?id=NISX20220214_0001758880&cID=10511&pID=10500\n",
-      "文, 쇼트트랙 女 대표팀에 축전… “함께하는 힘이 감동으로” 링크: http://www.segye.com/content/html/2022/02/14/20220214500090.html?OutUrl=naver\n",
-      "쇼트트랙 여자대표팀, 3,000m 계주 은메달 링크: http://mbn.mk.co.kr/pages/news/newsView.php?category=mbn00011&news_seq_no=4698815\n",
-      "여자 쇼트트랙, 3000m 계주서 은메달 링크: https://hankookilbo.com/News/Read/A2022021320100002455?did=NA\n",
-      "훈련 마칠때까지 웃음기 없던 男 쇼트트랙 “내일 밤 기대를” 링크: https://www.donga.com/news/article/all/20220215/111789577/1\n"
+      "[올림픽] 한국 쇼트트랙, 16일 여자 1,500ｍ·남자 계주서 '마지막 질주' 링크: http://yna.kr/AKR20220215001600007?did=1195m\n"
      ]
     }
    ],
@@ -204,14 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "서초구 기온:  현재 온도-5° \n"
+      "서울 기온:  현재 온도-7° \n"
      ]
     }
    ],
@@ -249,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,14 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2,704.48\n"
+      "2,676.54\n"
      ]
     }
    ],
