--- a/exercise04_buildup_answer.ipynb
+++ b/exercise04_buildup_answer.ipynb
@@ -542,6 +542,15 @@
     "\n",
     "print('저장 완료!!')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "피아스페이스(주) All Rights Reserved.  \n",
+    "\n",
+    "https://www.pia-space.net"
+   ]
   }
  ],
  "metadata": {
