실습예제 #5 풀이예제

--- a/exercise05_buildup_example.ipynb
+++ b/exercise05_buildup_example.ipynb
@@ -127,7 +127,7 @@
     "# 이 중에서 \"code=\" 뒤에 있는 코드를 복사하여 아래의 변수에 저장해 주세요.\n",
     "\n",
     "\n",
-    "code = \"QHmD7UY6j45crxkPXiXjrcT_sY5_7OE3tEtz7BIlWI32sTEz6xYZ3PdH1I5DQdtmMqWZCQo9c04AAAF_JXNoEg\"\n",
+    "code = \"weF7eLuSYdvs3ZZPEZxSymqXJuN0ZasvWi7XArnjlxWd-56wX1As5xrqTpXztShlBp_ZkgopcJ4AAAF_c6QBFA\"\n",
     "\n",
     "\n",
     "# 키 값 입력 후, 이 코드 블록을 실행하여 code 변수에 값이 저장되도록 합니다.\n"
@@ -158,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "access_token :  7uEc-TfeWSCfn70OVBMhaWN54QzFas3063I5rwo9dBEAAAF_JXQC9w\n"
+      "access_token :  rSXZgO4oBA8iQiAfWVlVsip_1LwVenHCc9FxyQo9dRsAAAF_c6RzKw\n"
      ]
     }
    ],
@@ -276,14 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RnTHscn-XWWMwgubT98CNkgjWZpmMdD7cG8z1wopdSkAAAF_JXVRBw\n"
+      "rSXZgO4oBA8iQiAfWVlVsip_1LwVenHCc9FxyQo9dRsAAAF_c6RzKw\n"
      ]
     }
    ],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
     "from bs4 import BeautifulSoup as bs\n",
     "\n",
     "\n",
-    "url = 'https://search.naver.com/search.naver?where=news&sm=tab_jum&query=코로나'\n",
+    "url = 'https://search.naver.com/search.naver?where=news&sm=tab_jum&query=대선'\n",
     "\n",
     "response = requests.get(url)\n",
     "html_text = response.text\n",
@@ -445,14 +445,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "메시지를 성공적으로 보냈습니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# 자유롭게 작성\n",
     "\n",
     "# access token으로 header 구성, 템플릿에 맞는 data 구성 후, requests.post() 함수로 메시지 url을 호출하는 기본적인 틀만 지키면 됩니다.\n",
     "\n",
+    "import json\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup as bs\n",
+    "\n",
+    "\n",
+    "food_url = \"https://search.naver.com/search.naver?where=nexearch&sm=top_hty&fbm=0&ie=utf8&query=%EA%B3%A0%EB%A0%A4%EB%8C%80+%EA%B7%BC%EC%B2%98+%EB%A7%9B%EC%A7%91\"\n",
+    "\n",
+    "resp = requests.get(food_url)\n",
+    "html_text = resp.text\n",
+    "\n",
+    "soup = bs(html_text, 'html.parser')\n",
+    "\n",
+    "rest_links = soup.select(\"li._1EKsQ._18knt._3in-q\")\n",
+    "# rest_links = soup.select(\"a._3nCBm\")\n",
+    "\n",
+    "rest_data = []\n",
+    "for tag in rest_links:\n",
+    "  \n",
+    "  rest_name = tag.select_one(\"span.OXiLu\").get_text()\n",
+    "  rest_rank = tag.select_one(\"span._2FqTn._1mRAM\").get_text() if tag.select_one(\"span._2FqTn._1mRAM\") != None else \"별점없음\"\n",
+    "  rest_desc = tag.select_one(\"span._3ebIp\").get_text() if tag.select_one(\"span._3ebIp\") != None else \"-\"\n",
+    "  rest_link = tag.select_one(\"a._3nCBm\").attrs['href']\n",
+    "  rest_img_str = tag.select_one(\"div.cb7hz.QmdzL\").attrs['style']\n",
+    "  \n",
+    "  start = rest_img_str.find('image:url(\"') + len('image:url(\"')\n",
+    "  rest_img = rest_img_str[start:-2]\n",
+    "\n",
+    "  rest_data.append(\n",
+    "    {\n",
+    "      \"title\": rest_name,\n",
+    "      \"description\": rest_desc + ' ' + rest_rank,\n",
+    "      \"image_url\": rest_img,\n",
+    "      \"image_width\": 320,\n",
+    "      \"image_height\": 320,\n",
+    "      \"link\": {\n",
+    "          \"web_url\": rest_link,\n",
+    "          \"mobile_web_url\": rest_link,\n",
+    "          \"android_execution_params\": \"/contents/1\",\n",
+    "          \"ios_execution_params\": \"/contents/1\"\n",
+    "      }\n",
+    "    }\n",
+    "  )\n",
+    "\n",
+    "\n",
+    "json_file = 'kakao_token.json'\n",
+    "\n",
+    "with open(json_file, 'r') as fp:\n",
+    "  tokens = json.load(fp)\n",
+    "  access_token = tokens['access_token']\n",
+    "  \n",
+    "\n",
+    "# 메시지 요청 url\n",
+    "url = \"https://kapi.kakao.com/v2/api/talk/memo/default/send\"\n",
+    "\n",
+    "# 메시지 구성하기\n",
+    "headers = {\n",
+    "    \"Authorization\": \"Bearer \" + tokens['access_token']\n",
+    "}\n",
+    "\n",
+    "data = {\n",
+    "    \"template_object\" : json.dumps(\n",
+    "        {\n",
+    "            \"object_type\": \"list\",\n",
+    "            \"header_title\": \"맛집 투어\",\n",
+    "            \"header_link\": {\n",
+    "                \"web_url\": food_url,\n",
+    "                \"mobile_web_url\": food_url,\n",
+    "                \"android_execution_params\": \"main\",\n",
+    "                \"ios_execution_params\": \"main\"\n",
+    "            },\n",
+    "            \"contents\": rest_data,\n",
+    "            \"buttons\": [\n",
+    "                {\n",
+    "                    \"title\": \"웹으로 이동\",\n",
+    "                    \"link\": {\n",
+    "                        \"web_url\": \"http://www.daum.net\",\n",
+    "                        \"mobile_web_url\": \"http://m.daum.net\"\n",
+    "                    }\n",
+    "                },\n",
+    "                {\n",
+    "                    \"title\": \"앱으로 이동\",\n",
+    "                    \"link\": {\n",
+    "                        \"android_execution_params\": \"main\",\n",
+    "                        \"ios_execution_params\": \"main\"\n",
+    "                    }\n",
+    "                }\n",
+    "            ]\n",
+    "        }\n",
+    "    )\n",
+    "}\n",
+    "\n",
+    "# 메시지 보내기\n",
+    "response = requests.post(url, headers=headers, data=data)\n",
+    "if response.json().get('result_code') == 0:\n",
+    "    print('메시지를 성공적으로 보냈습니다.')\n",
+    "else:\n",
+    "    print('메시지를 성공적으로 보내지 못했습니다. 오류메시지 : ' + str(response.json()))\n",
     "\n"
    ]
   },
